# bioutils

./: .SRR1700869.fastq.gz.icloud  .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  index.md
bioutils/src/utils/: check.rs  mod.rs  quality.rs  replace.rs
examples/: align.rs  download_read_align_noodles.rs  download_read_align_seq_io.rs  fastq_summary.rs  filter_paired.rs  filter_paired_reads.rs  find_pattern_positions.rs  qs.rs  quality_visual.rs  read_file_noodles.rs  read_file_seq_io.rs  reference.rs  sequence_visual.rs  single_cell_fastq_barcode_split.rs  step1_make_directories.rs  step2_download_files.rs  step3_read_fastq_noodles.rs  step3_read_files.rs  step3_read_files_noodles.rs  step3b_read_fastq_seq_io.rs  step3b_read_files_seq_io.rs  step4_align.rs  step5_make_visualizations.rs  step5_quality_visual.rs  step5_sequence_visual.rs  step5_visualize.rs  test.rs  zfastq_summary.rs
src/: README.md  lib.rs
src/charsets/: ascii.rs  bioutils.rs  flags.rs  iupac.rs  mod.rs  percent.rs  qs.rs  quality.rs
src/drafts/: checkdraft.rs  complement.rs  new.rs  percent.rs  quality.rs  recode.rs
src/files/: http.rs  infer.rs  mod.rs
src/files/fastq/: barcode.rs  function.rs  hash.rs  hashset.rs  mod.rs  read.rs  util.rs
src/files/image/: color.rs  mod.rs  png.rs
src/img/: color.rs  mod.rs  png.rs
src/io/: http.rs  mod.rs  write.rs
src/references/: ercc.rs  ftp.rs  functions.rs  gencode.rs  http.rs  list_references.rs  mod.rs  phix.rs
src/utils/: Arithmetic.rs  arithmetic.rs  check.rs  complement.rs  count.rs  edit.rs  find.rs  function.rs  math.rs  mod.rs  mutate.rs  new.rs  palindrome.rs  percent.rs  quality.rs  recode.rs  replace.rs  replacefunct.rs  replacetrait.rs  tryfrom.rs
src/utils/check/: mod.rs  palindrome.rs  repeating.rs  value.rs
src/utils/check/qual/: mod.rs
src/utils/element/: check.rs  mod.rs  percent.rs  quality.rs  recode_quality.rs  tryfrom.rs  value.rs
src/utils/get/: item.rs  mod.rs  position.rs  value.rs
src/utils/hashmap/: algebra.rs  algorithms.rs  mod.rs  value.rs
src/utils/image/: color.rs  img.rs  mod.rs
src/utils/item/: arithmetic.rs  check.rs  checkdraft.rs  complement.rs  count.rs  find.rs  mod.rs  mutate.rs  new.rs  percent.rs  quality.rs  recode_quality.rs  replace.rs  vec.rs
src/utils/mutate/: item.rs  mod.rs  mutate.rs  random.rs
src/utils/new/: mod.rs  random.rs
(+1 files in other folders)
