[package]
name = "bioutils"
version = "0.1.7"
authors = ["Christopher Sugai <christophersugai@gmail.com>"]
edition = "2018"
description = "A crate containing simple alphabets and utilities for biological sequence data."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

unicode-segmentation = "1.7.1"
rand = "0.8.3"
lazy_static = "1.4.0"
url = "2.2.1"
curl = "0.4.34"
reqwest = "0.11.2"
error-chain = "0.12.4"
select = "0.5.0"
tokio = "1.4.0"
ftp = { version = "3.0.1"}
regex = "1.4.5"
flate2 = "1.0.20"
seq_io = "0.3.1"
#cmd_lib = "1.0.8"
suffix_array = "0.5.0"
#num-integer = "0.1.44"
