[package]
name = "bioutils"
version = "0.2.0"
authors = ["Christopher Sugai <christophersugai@gmail.com>"]
edition = "2018"
description = "A crate containing simple utilities and alphabets for biological sequence data."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.3"
lazy_static = "1.4.0"
url = "2.2.1"
curl = "0.4.34"
reqwest = "0.11.2"
ftp = { version = "3.0.1"}
regex = "1.4.5"
flate2 = "1.0.20"
seq_io = "0.3.1"
suffix_array = "0.5.0"
image = "0.23.14"
infer = "0.4.0"
noodles = { git = "https://github.com/zaeleus/noodles.git", features = ["fastq", "fasta"] }

[features]

